# unsolved_mystery

./: .gitignore  README.md  main.py  pyproject.toml
backend/: auth.py  config.py  db.py  main.py  rag_engine.py  requirements.txt  schemas.py
frontend/: app.py
